--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "engines": {"node":"16.13.1","npm":"8.1.2"},
   "dependencies": {
     "bootstrap": "^5.2.0",
     "next": "12.2.5",
