--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next",
-    "build": " npm i && npm run build",
-    "start": "next start -p $PORT"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "engines": {"node":"16.13.1","npm":"8.1.2"},
   "dependencies": {
