--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start"
   },
-
+  "engines": {
+    "node": "16.16.0"
+  },
   "dependencies": {
     "bootstrap": "^5.2.0",
     "next": "12.2.5",
